data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_61.wast
;; 2. **Test with Single Out-of-Bound Target**:    - A `block` containing a `br_table` instruction with a single target index that is out of bounds.    - This tests if `br_table` correctly identifies and responds to an out-of-bound index, ensuring it checks the label indices properly.    - Edge Case: Wizard_engine's `ctl_stack` might not correctly handle out-of-bound indices under state management.

(assert_invalid
 (module (func $test-br_table-out-of-bounds
   (block
     (block (br_table 1 (i32.const 0)))
   )
 ))
 "branch depth out of bounds"
)